update pic links, move video fn to js file

--- a/gamebalance.html
+++ b/gamebalance.html
@@ -73,7 +73,7 @@
                         <p>Using the machinations tool to make an XP system for an RPG game.</p>
                     </div>
                     <div class="card-action">
-                        <a href="images/gamebalance/Machinations%20Diagram%20Snapshot%20-%20Varun%20Bajaj.PNG"
+                        <a href="images/gamebalance/Machinations Diagram Snapshot - Varun Bajaj.PNG"
                             download="Varun Sunil Bajaj - Machinations Diagram.png" target="_blank">Machinations
                             Diagram</a>
                         <a href="https://drive.google.com/file/d/11LieVN7xT3U0SLVSRHKOPDtXAajgCoVA/view?usp=sharing"
@@ -88,7 +88,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(2).png">
+                        <img src="images/gamebalance/Pic (2).png">
                         <span class="card-title">Designing an Evil Gambling Game (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -105,7 +105,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(2).jpg">
+                        <img src="images/gamebalance/Pic (2).jpg">
                         <span class="card-title">Creating a Balanced Expansion Pack and a New Mechanic for a Micro TCG
                             (Individual)</span>
                     </div>
@@ -125,7 +125,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(3).png">
+                        <img src="images/gamebalance/Pic (3).png">
                         <span class="card-title">Creating an AI for a Dice Game (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -141,7 +141,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(4).PNG">
+                        <img src="images/gamebalance/Pic (4).PNG">
                         <span class="card-title">Defeating an AI in an Idle Game (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -165,7 +165,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(5).PNG">
+                        <img src="images/gamebalance/Pic (5).png">
                         <span class="card-title black-text">Computing Probabilities Using Spreadsheets
                             (Individual)</span>
                     </div>
@@ -186,7 +186,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(3).jpg">
+                        <img src="images/gamebalance/Pic (3).jpg">
                         <span class="card-title black-text">Designing a Markov Chain in Excel (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -204,7 +204,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(4).jpg">
+                        <img src="images/gamebalance/Pic (4).jpg">
                         <span class="card-title black-text">Intransitive Game AI (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -220,7 +220,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(5).jpg">
+                        <img src="images/gamebalance/Pic (5).jpg">
                         <span class="card-title">Presentation on Weapon Balance in Halo 3 (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -240,7 +240,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamebalance/Pic%20(6).jpg">
+                        <img src="images/gamebalance/Pic (6).jpg">
                         <span class="card-title black-text">Practicing Probability (Individual)</span>
                     </div>
                     <div class="card-content white-text">
