--- a/gamedev.html
+++ b/gamedev.html
@@ -66,7 +66,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gamedev/tempest%20(1).jpg">
+                        <img src="images/gamedev/tempest (1).jpg">
                         <span class="card-title">Tempest Quality Assurance Process (Individual)</span>
                     </div>
                     <div class="card-content white-text">
