--- a/gameplay_prototyping.html
+++ b/gameplay_prototyping.html
@@ -179,7 +179,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img src="images/gameplay_prototyping/Game%20Screenshot.png">
+                        <img src="images/gameplay_prototyping/Game Screenshot.png">
                         <span class="card-title">Alternate Control Project 1 (Group Project)</span>
                     </div>
                     <div class="card-content white-text">
@@ -383,8 +383,7 @@
             <div class="col s12 m4 l4">
                 <div class="card hoverable black">
                     <div class="card-image">
-                        <img
-                            src="images/gameplay_prototyping/There%20Will%20Be%20Blood%20Game%20Board%20-%20Varun%20Sunil%20Bajaj.jpg">
+                        <img src="images/gameplay_prototyping/There Will Be Blood Game Board - Varun Sunil Bajaj.jpg">
                         <span class="card-title">Designing a Movie-based Board Game (Individual)</span>
                     </div>
                     <div class="card-content white-text">
@@ -394,7 +393,7 @@
                     <div class="card-action">
                         <a href="https://drive.google.com/file/d/1To0hCO4H7jHEv4odhTFPLWIUSqYvmbB4/view?usp=sharing"
                             download="ThereWillBeBlood_VarunBajaj.pdf" target="_blank">Download Rule Sheet</a>
-                        <a href="images/gameplay_prototyping/There%20Will%20Be%20Blood%20Game%20Board%20-%20Varun%20Sunil%20Bajaj.jpg"
+                        <a href="images/gameplay_prototyping/There Will Be Blood Game Board - Varun Sunil Bajaj.jpg"
                             download="ThereWillBeBlood_GameBoard.jpg" target="_blank">Download Game Board</a>
                     </div>
                 </div>
@@ -425,6 +424,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/videoHelper.js"></script>
     <script>
         $(document).ready(function () {
             $('.scrollspy').scrollSpy();
@@ -433,17 +433,6 @@
             });
         });
 
-    </script>
-    <script>
-        function showhide_video(divId, videoId) {
-            var e = document.getElementById(divId);
-            if (e.style.display == 'none') e.style.display = 'block';
-            else e.style.display = 'none';
-            var f = document.getElementById(videoId);
-            // pause iframe video
-            var iframeSrc = f.src;
-            f.src = iframeSrc;
-        }
     </script>
 </body>
 
