--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="col s12 m4 l4">
                         <div class="card hoverable black">
                             <div class="card-image">
-                                <img src="images/home/Game%20Balance%20Cover.png" src="height: 319px; width:792px">
+                                <img src="images/home/Game Balance Cover.png" src="height: 319px; width:792px">
                                 <span class="card-title black-text">Game Balance</span>
                             </div>
                             <div class="card-content white-text">
