--- a/leveldesign.html
+++ b/leveldesign.html
@@ -79,8 +79,8 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="Enemy-based Level Design - Varun Sunil Bajaj.pdf"
-              download="Varun Sunil Bajaj - Enemy-based Level Design.pdf">Download</a>
+            <a href="https://drive.google.com/file/d/1kbgmUd_VFlYyhAy5QkPgfbO0zu-O1rbR/view?usp=sharing"
+              download="Varun Sunil Bajaj - Enemy-based Level Design.pdf" target="_blank">Download</a>
           </div>
         </div>
       </div>
@@ -96,14 +96,13 @@
             </p>
           </div>
           <div class="card-action">
-            <a onclick="showhide_portal();">Watch Gameplay</a>
-            <a href="Portal 2 Level - Level Design Document - Varun Sunil Bajaj.pdf"
-              download="Varun Sunil Bajaj - Portal 2 Level Design Document.pdf">Download Document</a>
+            <a onclick="showhide_video('portalvideodiv', 'portalvideoid');">Watch Gameplay</a>
+            <a href="https://drive.google.com/file/d/1hyOzs5jlIkaJropNBl0YWZsIZGpFFFHN/view?usp=sharing"
+              download="Varun Sunil Bajaj - Portal 2 Level Design Document.pdf" target="_blank">Download Document</a>
           </div>
-          <div class="video-container" id="portal" style="display: none;">
-            <video class="responsive-video" controls id="portal">
-              <source src="Portal 2 Custom Level - All Gelled Up Gameplay - Varun Sunil Bajaj.mp4" type="video/mp4" />
-            </video>
+          <div class="video-container" id="portalvideodiv" style="display: none;">
+            <iframe id="portalvideoid"
+              src="https://drive.google.com/file/d/16pOWuimwEZDDEjzE8ltC8So7PXwWxa2E/preview"></iframe>
           </div>
         </div>
       </div>
@@ -129,7 +128,7 @@
       <div class="col s12 m4 l4">
         <div class="card hoverable black">
           <div class="card-image">
-            <img src="images/leveldesign/Far%20Cry%20Level%20Editor.PNG" />
+            <img src="images/leveldesign/Far Cry Level Editor.PNG" />
             <span class="card-title">Far Cry Level Design (Individual)</span>
           </div>
           <div class="card-content white-text">
@@ -143,8 +142,7 @@
           </div>
           <div class="video-container" id="fc" style="display: none;">
             <video class="responsive-video" controls id="fc">
-              <source src="The%20Island%20-%20Far%20Cry%203%20Level%20Editor%20-%20Varun%20Sunil%20Bajaj.mp4"
-                type="video/mp4" />
+              <source src="The Island - Far Cry 3 Level Editor - Varun Sunil Bajaj.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -162,14 +160,14 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%202D%20Platformer/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20Walkman%20Level%20Design%20Document.pdf"
+            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - 2D Platformer/Varun Sunil Bajaj - Level Design - Walkman Level Design Document.pdf"
               download="Varun Sunil Bajaj - Level Design - Walkman Level Design Document.pdf">Download Level Layout</a>
             <a onclick="showhide_2d();">Watch Gameplay</a>
           </div>
           <div class="video-container" id="2d" style="display: none;">
             <video class="responsive-video" controls id="2d">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%202D%20Platformer/Varun Sunil Bajaj - Level Design - Walkman Gameplay and Commentary.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - 2D Platformer/Varun Sunil Bajaj - Level Design - Walkman Gameplay and Commentary.mp4"
                 type="video/mp4" />
             </video>
           </div>
@@ -188,7 +186,7 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="All%20Assignments/LEVEL%20DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf"
+            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf"
               download="Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf">Download Level Layout</a>
             <a onclick="showhide_fps1();">Iteration 1</a>
             <a onclick="showhide_fps2();">Iteration 2</a>
@@ -196,14 +194,14 @@
           <div class="video-container" id="fps1" style="display: none;">
             <video class="responsive-video" controls id="fps1">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20CS%20GO%20Map/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20CS%20GO%20Level%20Gameplay%20and%20Commentary.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Level Gameplay and Commentary.mp4"
                 type="video/mp4" />
             </video>
           </div>
           <div class="video-container" id="fps2" style="display: none;">
             <video class="responsive-video" controls id="fps2">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20CS%20GO%20Map/Varun Sunil Bajaj - Level Design - CS GO Iteration 2.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Iteration 2.mp4"
                 type="video/mp4" />
             </video>
           </div>
@@ -222,7 +220,7 @@
             <p>Designing a race using the GTA 5 level editor.</p>
           </div>
           <div class="card-action">
-            <a href="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20GTA%205%20Transform%20Race/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20GTA%205%20Transform%20Race%20Level%20Design%20Document.pdf"
+            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf"
               download="Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf">Download
               Level
               Layout</a>
@@ -234,28 +232,28 @@
           <div class="video-container" id="gta1" style="display: none;">
             <video class="responsive-video" controls id="gta1">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20GTA%205%20Transform%20Race/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20Initial%20Racing%20Level.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design - Initial Racing Level.mp4"
                 type="video/mp4" />
             </video>
           </div>
           <div class="video-container" id="gta2" style="display: none;">
             <video class="responsive-video" controls id="gta2">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20GTA%205%20Transform%20Race/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-Racing%20Level%20Iteration%201.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design -Racing Level Iteration 1.mp4"
                 type="video/mp4" />
             </video>
           </div>
           <div class="video-container" id="gta3" style="display: none;">
             <video class="responsive-video" controls id="gta3">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20GTA%205%20Transform%20Race/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-Racing%20Level%20Iteration%202.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design -Racing Level Iteration 2.mp4"
                 type="video/mp4" />
             </video>
           </div>
           <div class="video-container" id="gta4" style="display: none;">
             <video class="responsive-video" controls id="gta4">
               <source
-                src="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20GTA%205%20Transform%20Race/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-Racing%20Level%20Iteration%204.mp4"
+                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design -Racing Level Iteration 4.mp4"
                 type="video/mp4" />
             </video>
           </div>
@@ -271,7 +269,7 @@
             <p>Analysing a level from Playdead's INSIDE.</p>
           </div>
           <div class="card-action">
-            <a href="All%20Assignments/LEVEL%20DESIGN/Varun Sunil Bajaj - Level Design - Level Analysis/Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx"
+            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - Level Analysis/Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx"
               download="Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx">Download</a>
           </div>
         </div>
@@ -286,7 +284,7 @@
             <p>Analysing a level from Respawn's Titanfall 2.</p>
           </div>
           <div class="card-action">
-            <a href="All%20Assignments/LEVEL%20DESIGN/Varun Sunil Bajaj - Level Design - Level Analysis/Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
+            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - Level Analysis/Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
               download="Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx">Download</a>
           </div>
         </div>
@@ -303,7 +301,7 @@
             <p>A seminar on how Level Design can be used to tell a story.</p>
           </div>
           <div class="card-action">
-            <a href="All%20Assignments/LEVEL%20DESIGN/Varun%20Sunil%20Bajaj%20-%20Level%20Design%20-%20Graduate%20Seminar/Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
+            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - Graduate Seminar/Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
               download="Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx">Download</a>
           </div>
         </div>
@@ -334,6 +332,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/videoHelper.js"></script>
   <script>
     $(document).ready(function () {
       $(".scrollspy").scrollSpy();
@@ -341,79 +340,6 @@
         full_width: true
       });
     });
-  </script>
-  <script>
-    function showhide_2d() {
-      var e = document.getElementById("2d");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("2d");
-      f.pause();
-    }
-
-    function showhide_fps1() {
-      var e = document.getElementById("fps1");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("fps1");
-      f.pause();
-    }
-
-    function showhide_fps2() {
-      var e = document.getElementById("fps2");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("fps2");
-      f.pause();
-    }
-
-    function showhide_gta1() {
-      var e = document.getElementById("gta1");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("gta1");
-      f.pause();
-    }
-
-    function showhide_gta2() {
-      var e = document.getElementById("gta2");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("gta2");
-      f.pause();
-    }
-
-    function showhide_gta3() {
-      var e = document.getElementById("gta3");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("gta3");
-      f.pause();
-    }
-
-    function showhide_gta4() {
-      var e = document.getElementById("gta4");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("gta4");
-      f.pause();
-    }
-
-    function showhide_fc() {
-      var e = document.getElementById("fc");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("fc");
-      f.pause();
-    }
-
-    function showhide_portal() {
-      var e = document.getElementById("portal");
-      if (e.style.display == "none") e.style.display = "block";
-      else e.style.display = "none";
-      var f = document.getElementById("portal");
-      f.pause();
-    }
   </script>
 </body>
 
