--- a/vr_game_dev.html
+++ b/vr_game_dev.html
@@ -73,27 +73,27 @@
                         <p>Creating an Escape Room game playable in Virtual Reality, using Unity 3D.</p>
                     </div>
                     <div class="card-action">
-                        <a href="Game%20Files.zip" download="Varun Sunil Bajaj - Escape Room VR.zip">Download Game</a>
+                        <a href="Game Files.zip" download="Varun Sunil Bajaj - Escape Room VR.zip">Download Game</a>
                         <a onclick="showhide_lvl1();">View Level 1 Pitch</a>
                         <a onclick="showhide_lvl2();">View Level 2 Pitch</a>
                         <a onclick="showhide_game();">Walkthrough</a><br>
-                        <a href="Escape%20Room%20VR%20-%20Final%20Design%20Document.pdf"
+                        <a href="Escape Room VR - Final Design Document.pdf"
                             download="Varun Sunil Bajaj - Escape Room Game Design Document.pdf">Download Game Design
                             Document</a>
                     </div>
                     <div class="video-container" id="lvl1" style="display: none;">
                         <video class="responsive-video" controls id="lvl1">
-                            <source src="Room%201%20Pitch.mp4" type="video/mp4">
+                            <source src="Room 1 Pitch.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="video-container" id="lvl2" style="display: none;">
                         <video class="responsive-video" controls id="lvl2">
-                            <source src="Room%202%20Pitch.mp4" type="video/mp4">
+                            <source src="Room 2 Pitch.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="video-container" id="game" style="display: none;">
                         <video class="responsive-video" controls id="game">
-                            <source src="Escape%20Room%20VR%20Final%20Game%20Gameplay.mp4" type="video/mp4">
+                            <source src="Escape Room VR Final Game Gameplay.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
