complete leveldesign page

--- a/leveldesign.html
+++ b/leveldesign.html
@@ -118,8 +118,8 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="Steep Level Design Document - Varun Sunil Bajaj.pdf"
-              download="Varun Sunil Bajaj - Steep Level Design Document.pdf">Download</a>
+            <a href="https://drive.google.com/file/d/1IuqwKa2ut4_H81LDEoUDN4xFixhrAtd5/view?usp=sharing"
+              download="Varun Sunil Bajaj - Steep Level Design Document.pdf" target="_blank">Download</a>
           </div>
         </div>
       </div>
@@ -138,12 +138,11 @@
             </p>
           </div>
           <div class="card-action">
-            <a onclick="showhide_fc();">Watch Gameplay</a>
+            <a onclick="showhide_video('fcvideodiv', 'fcvideoid');">Watch Gameplay</a>
           </div>
-          <div class="video-container" id="fc" style="display: none;">
-            <video class="responsive-video" controls id="fc">
-              <source src="The Island - Far Cry 3 Level Editor - Varun Sunil Bajaj.mp4" type="video/mp4" />
-            </video>
+          <div class="video-container" id="fcvideodiv" style="display: none;">
+            <iframe id="fcvideoid"
+              src="https://drive.google.com/file/d/1yl6xw1h-4DZs6RrGdTV6bM6TIbL-rt6m/preview"></iframe>
           </div>
         </div>
       </div>
@@ -160,16 +159,14 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - 2D Platformer/Varun Sunil Bajaj - Level Design - Walkman Level Design Document.pdf"
-              download="Varun Sunil Bajaj - Level Design - Walkman Level Design Document.pdf">Download Level Layout</a>
-            <a onclick="showhide_2d();">Watch Gameplay</a>
+            <a href="https://drive.google.com/file/d/1ScpCx6JUd7rmqjJ3dOdp_jR5QvjyoKuS/view?usp=sharing"
+              download="Varun Sunil Bajaj - Level Design - Walkman Level Design Document.pdf" target="_blank">Download
+              Level Layout</a>
+            <a onclick="showhide_video('2dvideodiv', '2dvideoid');">Watch Gameplay</a>
           </div>
-          <div class="video-container" id="2d" style="display: none;">
-            <video class="responsive-video" controls id="2d">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - 2D Platformer/Varun Sunil Bajaj - Level Design - Walkman Gameplay and Commentary.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="2dvideodiv" style="display: none;">
+            <iframe id="2dvideoid"
+              src="https://drive.google.com/file/d/11EDKIIzknVJi0ESD5uakj9uN6OQ2N5hi/preview"></iframe>
           </div>
         </div>
       </div>
@@ -186,24 +183,20 @@
             </p>
           </div>
           <div class="card-action">
-            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf"
-              download="Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf">Download Level Layout</a>
-            <a onclick="showhide_fps1();">Iteration 1</a>
-            <a onclick="showhide_fps2();">Iteration 2</a>
+            <a href="https://drive.google.com/file/d/1ZoAMlGyu3qnHs-1fbe7Jhu8qX77A7CS1/view?usp=sharing"
+              download="Varun Sunil Bajaj - Level Design - CS GO Level Design Document.pdf" target="_blank">Download
+              Level
+              Layout</a>
+            <a onclick="showhide_video('fps1videodiv', 'fps1videoid');">Iteration 1</a>
+            <a onclick="showhide_video('fps2videodiv', 'fps2videoid');">Iteration 2</a>
           </div>
-          <div class="video-container" id="fps1" style="display: none;">
-            <video class="responsive-video" controls id="fps1">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Level Gameplay and Commentary.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="fps1videodiv" style="display: none;">
+            <iframe id="fps1videoid"
+              src="https://drive.google.com/file/d/1Tw_ypjzZ3-7cCvUWCYAkgwlAnr5vNoML/preview"></iframe>
           </div>
-          <div class="video-container" id="fps2" style="display: none;">
-            <video class="responsive-video" controls id="fps2">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - CS GO Map/Varun Sunil Bajaj - Level Design - CS GO Iteration 2.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="fps2videodiv" style="display: none;">
+            <iframe id="fps2videoid"
+              src="https://drive.google.com/file/d/1HTC0RkI3V6hty_WkfEi3PWW_XZH-Mju6/preview"></iframe>
           </div>
         </div>
       </div>
@@ -220,42 +213,31 @@
             <p>Designing a race using the GTA 5 level editor.</p>
           </div>
           <div class="card-action">
-            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf"
-              download="Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf">Download
+            <a href="https://drive.google.com/file/d/16V_9S-T0rY9TfR6voyRcjoqfZm9nvaHu/view?usp=sharing"
+              download="Varun Sunil Bajaj - Level Design - GTA 5 Transform Race Level Design Document.pdf"
+              target="_blank">Download
               Level
               Layout</a>
-            <a onclick="showhide_gta1();">Initial Level</a>
-            <a onclick="showhide_gta2();">Iteration 1</a>
-            <a onclick="showhide_gta3();">Iteration 2</a>
-            <a onclick="showhide_gta4();">Iteration 3</a>
+            <a onclick="showhide_video('gta1videodiv', 'gta1videoid');">Initial Level</a>
+            <a onclick="showhide_video('gta2videodiv', 'gta2videoid');">Iteration 1</a>
+            <a onclick="showhide_video('gta3videodiv', 'gta3videoid');">Iteration 2</a>
+            <a onclick="showhide_video('gta4videodiv', 'gta4videoid');">Iteration 3</a>
           </div>
-          <div class="video-container" id="gta1" style="display: none;">
-            <video class="responsive-video" controls id="gta1">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design - Initial Racing Level.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="gta1videodiv" style="display: none;">
+            <iframe id="gta1videoid"
+              src="https://drive.google.com/file/d/1Tt58RvbH6_lthYZkGvjz9PuO14g48PZb/preview"></iframe>
           </div>
-          <div class="video-container" id="gta2" style="display: none;">
-            <video class="responsive-video" controls id="gta2">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design -Racing Level Iteration 1.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="gta2videodiv" style="display: none;">
+            <iframe id="gta2videoid"
+              src="https://drive.google.com/file/d/1-R4HUvpeHH-omGoG4R8miH2dJLIRZUc0/preview"></iframe>
           </div>
-          <div class="video-container" id="gta3" style="display: none;">
-            <video class="responsive-video" controls id="gta3">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design -Racing Level Iteration 2.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="gta3videodiv" style="display: none;">
+            <iframe id="gta3videoid"
+              src="https://drive.google.com/file/d/1DoCCVxFlnu4qCZwm9Hdi3QG_qhM2wodc/preview"></iframe>
           </div>
-          <div class="video-container" id="gta4" style="display: none;">
-            <video class="responsive-video" controls id="gta4">
-              <source
-                src="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - GTA 5 Transform Race/Varun Sunil Bajaj - Level Design -Racing Level Iteration 4.mp4"
-                type="video/mp4" />
-            </video>
+          <div class="video-container" id="gta4videodiv" style="display: none;">
+            <iframe id="gta4videoid"
+              src="https://drive.google.com/file/d/1_kBRv9IlegwPG31pjZ8snhtw3OGsrQBO/preview"></iframe>
           </div>
         </div>
       </div>
@@ -269,8 +251,8 @@
             <p>Analysing a level from Playdead's INSIDE.</p>
           </div>
           <div class="card-action">
-            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - Level Analysis/Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx"
-              download="Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx">Download</a>
+            <a href="https://drive.google.com/file/d/1nSrDGMwnrPdKLS2-cU4nC0wT1aQpc17S/view?usp=sharing"
+              download="Varun Sunil Bajaj - Level Design - Level Analysis - INSIDE.docx" target="_blank">Download</a>
           </div>
         </div>
       </div>
@@ -284,8 +266,9 @@
             <p>Analysing a level from Respawn's Titanfall 2.</p>
           </div>
           <div class="card-action">
-            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - Level Analysis/Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
-              download="Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx">Download</a>
+            <a href="https://drive.google.com/file/d/1pa-D0HbWXmTUMsOa00OLJELx_51WV5wU/view?usp=sharing"
+              download="Varun Sunil Bajaj - Level Design - Level Analysis - TITANFALL 2.docx"
+              target="_blank">Download</a>
           </div>
         </div>
       </div>
@@ -301,8 +284,9 @@
             <p>A seminar on how Level Design can be used to tell a story.</p>
           </div>
           <div class="card-action">
-            <a href="All Assignments/LEVEL DESIGN/Varun Sunil Bajaj - Level Design - Graduate Seminar/Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
-              download="Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx">Download</a>
+            <a href="https://drive.google.com/file/d/1THe3VrjCdQfBjcqTZNCuaE4UBRGsHYkn/view?usp=sharing"
+              download="Varun Sunil Bajaj - Level Design -Graduate Seminar-Storytelling using Level Design.pptx"
+              target="_blank">Download</a>
           </div>
         </div>
       </div>
